--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
@@ -37,8 +37,7 @@
        <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
        <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
        <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
-       <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
-       &nbsp;
+       <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
