--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
@@ -35,7 +35,7 @@
         Select a Java element (for example a Java compilation unit in the Package Explorer or a method in the Outline view) or some text in a Java editor.
       </li>
       <li>
-        From the selection&#39;s pop-up menu, navigate to the available Java searches. After you select a search to perform, the search progress is shown in a dialog. Note: in the
+        From the selection's pop-up menu, navigate to the available Java searches. After you select a search to perform, the search progress is shown in a dialog. Note: in the
         editor searches are available under the&nbsp;<strong><strong>Search</strong></strong> submenu.
       </li>
       <li>
