--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-61.htm
@@ -24,23 +24,23 @@
         The Organize Imports page defines the sorting order of import statements. In the Imports list, manage the list of package prefixes as follows: 
         <ul>
           <li>
-            Click&nbsp;<strong><strong>Add</strong></strong> to add a new prefix
+            Click&nbsp;<strong>Add</strong> to add a new prefix
           </li>
           <li>
-            Click&nbsp;<strong><strong>Remove</strong></strong> to remove the selected prefix from the list
+            Click&nbsp;<strong>Remove</strong> to remove the selected prefix from the list
           </li>
           <li>
-            Click the&nbsp;<strong><strong>Up</strong></strong> and&nbsp;<strong><strong>Down</strong></strong> buttons to rearrange the sequence of the list by moving the
+            Click the&nbsp;<strong>Up</strong> and&nbsp;<strong>Down</strong> buttons to rearrange the sequence of the list by moving the
             selected prefix up or down
           </li>
         </ul>
       </li>
       <li>
-        In the&nbsp;<strong><strong>Number of qualified imports before * is used</strong></strong> field, type the number of import statements that are allowed to refer to the
+        In the&nbsp;<strong>Number of qualified imports before * is used</strong> field, type the number of import statements that are allowed to refer to the
         same package before&nbsp;<em>&lt;package prefix&gt;.*</em> is used. This number is called the import threshold.
       </li>
       <li>
-        Click&nbsp;<strong><strong>OK</strong></strong> when you are done.
+        Click <strong>OK</strong> when you are done.
       </li>
     </ol>
     <p>
