--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -27,7 +27,7 @@
       </li>
     </ul>
     <p>
-      Note: Files and Java elements such as types and their members change in time. A &lsquo;snapshot&rsquo; of what they look like at&nbsp; a point in time (as saved in the local
+      Note: Files and Java elements such as types and their members change in time. A &lsquo;snapshot&rsquo; of what they look like a point in time (as saved in the local
       history) is called an edition.
     </p>
     <p>
@@ -49,8 +49,9 @@
       <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference">
     </p>
     <p>
-      <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       &nbsp;<br>
+      <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
+     </p>
+     <p>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
