--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-63.htm
@@ -27,7 +27,7 @@
         Select the element that you want to replace.
       </li>
       <li>
-        From the element&#39;s pop-up menu, select <strong><strong>Replace With &gt; Element from Local History</strong></strong>.
+        From the element's pop-up menu, select <strong>Replace With &gt; Element from Local History</strong>.
       </li>
       <li>
         In the upper pane of the resulting dialog, all available editions of the selected element in the local history are displayed.
@@ -36,7 +36,7 @@
         Select an edition in the upper pane to view the differences between the selected edition and the edition in the workbench.
       </li>
       <li>
-        When you have identified the edition with which you want to replace the existing Java element, click <strong><strong>Replace</strong>.</strong>&lt;&lt;/p&gt;
+        When you have identified the edition with which you want to replace the existing Java element, click <strong>Replace</strong>.
       </li>
       <li>
         The local history edition replaces the current one in the editor. <em>Note: The changed compilation unit has not yet been saved at this point.</em>
@@ -59,11 +59,9 @@
       <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference">
     </p>
     <p>
-      <a href="../reference/ref-view-outline.htm">Outline view for Java</a><br>
-       &nbsp;
+      <a href="../reference/ref-view-outline.htm">Outline view for Java</a>
     </p>
     <p>
-      &nbsp;<br>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
