--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-64.htm
@@ -26,7 +26,7 @@
         In the Java view, select the element to whose container type you want to restore the deleted element.
       </li>
       <li>
-        From the type&#39;s pop-up menu in the Java view, select <strong><strong>Restore from Local History</strong></strong>.
+        From the type's pop-up menu in the Java view, select <strong>Restore from Local History</strong>.
       </li>
       <li>
         In the upper pane of the resulting dialog, all available editions of the selected element in the local history are displayed.
@@ -35,7 +35,7 @@
         Select an edition in the upper pane to view the content of the selected element.
       </li>
       <li>
-        When you have identified the edition that you want to restore, press <strong><strong>Restore</strong></strong>. The local history edition is loaded into the editor.
+        When you have identified the edition that you want to restore, press <strong>Restore</strong>. The local history edition is loaded into the editor.
       </li>
     </ol>
     <p>
@@ -48,8 +48,7 @@
       <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks">
     </p>
     <p>
-      <a href="tasks-62.htm">Using the local history</a><br>
-       &nbsp;
+      <a href="tasks-62.htm">Using the local history</a>
     </p>
     <p>
       <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference">
@@ -58,7 +57,6 @@
       <a href="../reference/ref-view-outline.htm">Outline view for Java</a>
     </p>
     <p>
-      &nbsp;<br>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
