--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-67.htm
@@ -28,7 +28,7 @@
         Format the code by either 
         <ul>
           <li>
-            Selecting <strong>Format</strong> from the editor&#39;s pop-up menu or
+            Selecting <strong>Format</strong> from the editor's pop-up menu or
           </li>
           <li>
             Pressing <strong>Ctrl+Shift+F</strong> or
@@ -44,22 +44,22 @@
     </p>
     <p>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
-       <a href="../concepts/concepts-7.htm">Java editor</a>
+      <a href="../concepts/concepts-7.htm">Java editor</a>
     </p>
     <p>
       <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
     <p>
       <a href="tasks-54.htm">Using the Java editor</a><br>
-       <a href="tasks-66.htm">Formatting Java code</a><br>
-       <a href="tasks-68.htm">Setting code formatting preferences</a>
+      <a href="tasks-66.htm">Formatting Java code</a><br>
+      <a href="tasks-68.htm">Setting code formatting preferences</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
     </p>
     <p>
       <a href="../reference/ref-menu-source.htm">Source menu</a><br>
-       <a href="../reference/ref-17.htm">Code Formatter preferences</a>
+      <a href="../reference/ref-17.htm">Code Formatter preferences</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
