--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-68.htm
@@ -20,7 +20,7 @@
         In the left pane, expand the <strong>Java</strong> category and select <strong>Code Formatter</strong>. The Code Formatter Preferences page opens.
       </li>
       <li>
-        In the <strong><strong>New Lines</strong></strong>, <strong><strong>Line Splitting,</strong> and <strong>Style</strong></strong> tabs, select the code formatting
+        In the <strong>New Lines</strong>, <strong>Line Splitting,</strong> and <strong>Style</strong> tabs, select the code formatting
         conventions that you want the formatter to follow.
       </li>
       <li>
@@ -28,7 +28,7 @@
         like.
       </li>
       <li>
-        Click <strong><strong>OK</strong></strong> when you are done.
+        Click <strong>OK</strong> when you are done.
       </li>
     </ol>
     <p>
@@ -45,13 +45,12 @@
        <a href="tasks-67.htm">Formatting files or portions of code</a>
     </p>
     <p>
-      &nbsp;<img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference">
+      <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference">
     </p>
     <p>
       <a href="../reference/ref-17.htm">Code Formatter preferences</a>
     </p>
     <p>
-      <br>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
