--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -14,22 +14,22 @@
       Showing an element in the Package Explorer view
     </h1>
     <p>
-      You can reveal an element&#39;s location in the Package Explorer view
+      You can reveal an element's location in the Package Explorer view
     </p>
-    <ul>
+    <ol>
       <li>
         In the Hierarchy or Outline view, select a type or one of its members.
       </li>
       <li>
-        From the selected element&#39;s pop-up menu, select&nbsp;<strong>Show in Package Explorer</strong>. If the Package Explorer is not already open, then it opens in the
+        From the selected element's pop-up menu, select <strong>Show in Package Explorer</strong>. If the Package Explorer is not already open, then it opens in the
         current perspective. The workbench navigates to the selected element.
       </li>
       <li>
-        From the Java editor&#39;s pop-up menu, select Show in Package Explorer (the currently edited compilation unit will be revealed)
+        From the Java editor's pop-up menu, select Show in Package Explorer (the currently edited compilation unit will be revealed)
       </li>
-    </ul>
+    </ol>
     <p>
-      Note: The element might not be revealed if Package Explorer filters are active or the <strong>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show Members in Package
+      <strong>Note:</strong> The element might not be revealed if Package Explorer filters are active or the <strong>Window &gt; Preferences &gt; Java &gt; Appearance &gt; Show Members in Package
       Explorer</strong> preference is cleared.
     </p>
     <p>
@@ -52,8 +52,7 @@
     </p>
     <p>
       <a href="../reference/ref-13.htm">Java Base preference page</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       &nbsp;
+       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
