--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
@@ -16,23 +16,25 @@
     <p>
       You can open the Package Explorer on any type that is included on a project&#39;s class path.
     </p>
-    <p>
-      1.From the menu bar, select <strong>Navigate &gt; Go To &gt; Type.</strong> The Go To Type dialog opens.
-    </p>
-    <p>
-      2.In the&nbsp;<strong><strong>Choose a type</strong></strong> field, begin typing an expression to narrow the list of available types, using wildcards as needed. As you
-      type, the list is filtered to display only types that match the current expression.
-    </p>
-    <p>
-      3.In the&nbsp;<strong><strong>Matching Types</strong></strong> list, select a type. When there is more than one definition of a type, then select a package in
-      the&nbsp;<strong><strong>Qualifier</strong></strong> list.
-    </p>
-    <p>
-      4.Click&nbsp;<strong><strong>OK</strong></strong> when you are done. The selected type is displayed in the Package Explorer.
-    </p>
-    <p>
-      <strong>Note:</strong> Revealing may not be possible if Package Explorer filters are applied.
-    </p>
+    <ol>
+		<li>
+			From the menu bar, select <strong>Navigate &gt; Go To &gt; Type.</strong> The Go To Type dialog opens.
+		</li>
+		<li>
+			In the <strong>Choose a type</strong> field, begin typing an expression to narrow the list of available types, using wildcards as needed. As you
+      		type, the list is filtered to display only types that match the current expression.
+      	</li>
+		<li>
+			In the <strong>Matching Types</strong> list, select a type. When there is more than one definition of a type, then select a package in
+      		the <strong>Qualifier</strong> list.
+      	</li>
+		<li>
+			Click <strong>OK</strong> when you are done. The selected type is displayed in the Package Explorer.
+    	</li>
+    </ol>
+	<p>
+		<strong>Note:</strong> Revealing may not be possible if Package Explorer filters are applied.
+	</p>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
@@ -50,8 +52,7 @@
     </p>
     <p>
       <a href="../reference/ref-menu-navigate.htm">Navigate actions</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       &nbsp;
+       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
