--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-76.htm
@@ -19,20 +19,22 @@
     <p>
       <strong>Note:</strong> If you open a type from a CLASS or JAR file, you will see a special editor showing only method signatures unless you have attached source to it.
     </p>
-    <p>
-      1. Press <strong>Ctrl+Shift+T</strong> or, select <strong>Navigate</strong> &gt; <strong>Open Type</strong> from the menu bar. The Open Type dialog opens.
-    </p>
-    <p>
-      2. In the&nbsp;<strong><strong>Choose a type</strong></strong> field, begin typing an expression to narrow the list of available types, using wildcards as needed. As you
-      type, the list is filtered to display only types that match the current expression.
-    </p>
-    <p>
-      3. In the&nbsp;<strong><strong>Matching Types</strong></strong> list, select a type. When there is more than one definition of a type, then select a package in
-      the&nbsp;<strong><strong>Qualifier</strong></strong> list.
-    </p>
-    <p>
-      4. Click&nbsp;<strong><strong>OK</strong></strong> when you are done. An editor opens on the selected type.
-    </p>
+    <ol>
+		<li>
+			Press <strong>Ctrl+Shift+T</strong> or, select <strong>Navigate</strong> &gt; <strong>Open Type</strong> from the menu bar. The Open Type dialog opens.
+		</li>
+		<li>
+			In the <strong>Choose a type</strong> field, begin typing an expression to narrow the list of available types, using wildcards as needed. As you
+			type, the list is filtered to display only types that match the current expression.
+		</li>
+		<li>
+			In the <strong>Matching Types</strong> list, select a type. When there is more than one definition of a type, then select a package in
+			the <strong>Qualifier</strong> list.
+		</li>
+		<li>
+			Click <strong>OK</strong> when you are done. An editor opens on the selected type.
+		</li>
+	</ol>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
@@ -45,16 +47,14 @@
     <p>
       <a href="tasks-115.htm">Attaching source to a JAR file</a><br>
        <a href="tasks-73.htm">Opening an editor for a selected element</a><br>
-       <a href="tasks-54.htm">Using the Java editor</a><br>
-       &nbsp;
+       <a href="tasks-54.htm">Using the Java editor</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
     </p>
     <p>
       <a href="../reference/ref-menu-navigate.htm">Navigate actions</a><br>
-       <a href="../reference/ref-24.htm">Views and editors</a><br>
-       &nbsp;
+       <a href="../reference/ref-24.htm">Views and editors</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
