--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-77.htm
@@ -16,16 +16,18 @@
     <p>
       To reveal a package in the tree of the Package Explorer:
     </p>
-    <p>
-      1. Select <strong>Navigate</strong> &gt; <strong>Go To &gt; Package</strong> from the menu bar. The Go To Package dialog opens.
-    </p>
-    <p>
-      2. Type a package name in the&nbsp;<strong><strong>Choose a package</strong></strong> field to narrow the list of available packages, using wildcards as needed. As you type,
-      the list is filtered to display only packages that match the current expression.
-    </p>
-    <p>
-      3. Select a package from the list, then click&nbsp;<strong><strong>OK</strong></strong>. The selected package is displayed in the Package Explorer.
-    </p>
+    <ol>
+		<li>
+			Select <strong>Navigate</strong> &gt; <strong>Go To</strong> &gt; <strong>Package</strong> from the menu bar. The Go To Package dialog opens.
+		</li>
+		<li>
+			Type a package name in the <strong>Choose a package</strong> field to narrow the list of available packages, using wildcards as needed. As you type,
+			the list is filtered to display only packages that match the current expression.
+		</li>
+		<li>
+			Select a package from the list, then click <strong>OK</strong>. The selected package is displayed in the Package Explorer.
+		</li>
+	</ol>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
@@ -46,8 +48,7 @@
     </p>
     <p>
       <a href="../reference/ref-menu-navigate.htm">Navigate actions</a><br>
-       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
-       &nbsp;
+       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
