--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-80.htm
@@ -26,7 +26,7 @@
        <a href="../tasks/tasks-83.htm">Refactoring with preview</a><br>
        <a href="../tasks/tasks-84.htm">Previewing refactoring changes</a><br>
        <a href="../tasks/tasks-100.htm">Undoing a refactoring operation</a><br>
-       <a href="../tasks/tasks-101.htm">Redoing a refactoring operation</a><br>
+       <a href="../tasks/tasks-101.htm">Redoing a refactoring operation</a>
     </p>
     <p>
       <a href="tasks-85.htm">Copying and moving Java elements</a><br>
@@ -44,7 +44,7 @@
        <a href="tasks-162.htm">Self encapsulating a field</a><br>
        <a href="tasks-164.htm">Replacing a local variable with a query</a><br>
        <a href="tasks-165.htm">Pulling members up to superclass</a><br>
-       <a href="tasks-167.htm">Moving static members between types</a><br>
+       <a href="tasks-167.htm">Moving static members between types</a>
     </p>
     <p>
       <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27">
@@ -55,12 +55,7 @@
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
-      &nbsp;
-    </p>
-    <p>
-      &nbsp;<br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
-      "14"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
