--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-82.htm
@@ -12,32 +12,37 @@
     <h1>
       Refactoring without preview
     </h1>
-    <p>
-      1.<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Activate a refactoring command. For example, rename a type by selecting it in the Outline view and choosing
-      <strong>Refactor</strong> &gt; <strong>Rename</strong> from its pop-up menu.
-    </p>
-    <p>
-      2.<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> The Refactoring Parameters page prompts you for information necessary for the action. For example, the Rename Type Refactoring
-      wizard asks you for a new name for the selected type.
-    </p>
-    <p>
-      3.<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> Provide the necessary data on the parameters page, and click <strong><strong>Finish</strong></strong>.
-    </p>
-    <p>
-      4.<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> If no problems more severe than the default level set in the Refactoring Preferences page (<strong>Window</strong> &gt;
-      <strong>Preferences</strong> &gt; <strong>Java</strong> &gt; <strong>Refactoring</strong>) are anticipated, then the refactoring is carried out.<br>
-       If you chose in the Refactoring Preferences page to be notified of any problems after refactoring, then any detected problems are displayed at this time.<br>
-       If problems more severe than the default level set in the refactoring preferences are anticipated, then the problems page comes to the front to display the errors.
-    </p>
-    <p>
-      5.<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> If a Stop problem was anticipated, then the <strong><strong>Finish</strong></strong> and <strong><strong>Next</strong></strong>
-      buttons are disabled, and you are prevented from carrying out the refactoring. If the problems are related to data provided on the parameters page, click
-      <strong><strong>Back</strong></strong> and attempt to remedy the problem. Otherwise, click <strong><strong>Cancel</strong></strong> to close the wizard.
-    </p>
-    <p>
-      6.<span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> If other kinds of problems were anticipated, you can click <strong><strong>Finish</strong></strong> to acknowledge the
-      problems. The refactoring is carried out, and the wizard closes.
-    </p>
+    <ol>
+		<li>
+			Activate a refactoring command. For example, rename a type by selecting it in the Outline view and choosing 
+			<strong>Refactor</strong> &gt; <strong>Rename</strong> from its pop-up menu.
+		</li>
+		<li>
+			The Refactoring Parameters page prompts you for information necessary for the action. For example, the Rename Type Refactoring
+			wizard asks you for a new name for the selected type.
+		</li>
+		<li>
+			Provide the necessary data on the parameters page, and click <strong>Finish</strong>.
+		</li>
+		<li>
+			If no problems more severe than the default level set in the Refactoring Preferences page (<strong>Window</strong> &gt;
+			<strong>Preferences</strong> &gt; <strong>Java</strong> &gt; <strong>Refactoring</strong>) are anticipated, then the
+			refactoring is carried out.<br>
+			If you chose in the Refactoring Preferences page to be notified of any problems after refactoring, then any detected problems
+			are displayed at this time.<br>
+			If problems more severe than the default level set in the refactoring preferences are anticipated, then the problems page comes
+			to the front to display the errors.
+		</li>
+		<li>
+			If a Stop problem was anticipated, then the <strong>Finish</strong> and <strong>Next</strong> buttons are disabled, and you
+			are prevented from carrying out the refactoring. If the problems are related to data provided on the parameters page, click
+			<strong>Back</strong> and attempt to remedy the problem. Otherwise, click <strong>Cancel</strong> to close the wizard.
+		</li>
+		<li>
+			If other kinds of problems were anticipated, you can click <strong>Finish</strong> to acknowledge the problems. The refactoring
+			is carried out, and the wizard closes.
+		</li>
+	</ol>
     <p>
       <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0">
     </p>
@@ -61,8 +66,7 @@
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
-      &nbsp;<br>
-       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+     <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
