--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-83.htm
@@ -14,33 +14,33 @@
     </h1>
     <ol>
       <li>
-        Activate a refactoring command. For example, rename a type by selecting it in the Outline view and choosing <strong>Refactor</strong> &gt; <strong>Rename</strong> from its
-        pop-up menu.
+        Activate a refactoring command. For example, rename a type by selecting it in the Outline view and choosing
+        <strong>Refactor</strong> &gt; <strong>Rename</strong> from its pop-up menu.
       </li>
       <li>
-        The Refactoring Parameters page prompts you for information necessary for the action. For example, the Rename Type Refactoring wizard asks you for the new name for the
-        selected type.
+        The Refactoring Parameters page prompts you for information necessary for the action. For example, the Rename Type Refactoring wizard
+        asks you for the new name for the selected type.
       </li>
       <li>
-        Provide the necessary data on the parameters page, and then click <strong><strong>Next</strong></strong>.
+        Provide the necessary data on the parameters page, and then click  <strong>Next</strong>.
       </li>
       <li>
         If problems more severe than the default level set in the Refactoring Preferences page (<strong>Window</strong> &gt; <strong>Preferences</strong> &gt;
         <strong>Java</strong> &gt; <strong>Refactoring</strong>) are anticipated, then the problems page comes to the front to display anticipated errors. 
         <ul>
           <li>
-            If a Stop problem was anticipated, then the <strong><strong>Finish</strong></strong> and <strong><strong>Next</strong></strong> buttons are disabled, and you are
-            prevented from carrying out the refactoring. If the problems are related to data provided on the parameters page, click <strong><strong>Back</strong></strong> and
-            attempt to remedy the problem. Otherwise, click <strong><strong>Cancel</strong></strong> to close the wizard.
+            If a Stop problem was anticipated, then the <strong>Finish</strong> and <strong>Next</strong> buttons are disabled, and you are
+            prevented from carrying out the refactoring. If the problems are related to data provided on the parameters page, click <strong>Back</strong> and
+            attempt to remedy the problem. Otherwise, click <strong>Cancel</strong> to close the wizard.
           </li>
           <li>
-            If other kinds of problems were anticipated, you can click <strong><strong>Next</strong></strong> to acknowledge the problems and move on to the preview page.
+            If other kinds of problems were anticipated, you can click <strong>Next</strong> to acknowledge the problems and move on to the preview page.
           </li>
         </ul>
         The Refactoring Preview page opens.
       </li>
       <li>
-        Click <strong><strong>Finish</strong></strong> to execute the refactoring and close the wizard.
+        Click <strong>Finish</strong> to execute the refactoring and close the wizard.
       </li>
     </ol>
     <p>
@@ -67,8 +67,7 @@
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
-      <br>
-       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+     <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
