--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-84.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-84.htm
@@ -31,7 +31,7 @@
     </ul>
     <p>
       <strong>Note</strong>: Deselecting a node can result in compile errors when performing the refactoring. Only deselect a change if you are sure you want to exclude it from
-      the refactoring.&nbsp;
+      the refactoring.
     </p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
@@ -56,9 +56,7 @@
        <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
-      <br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
-      "14"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
