--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-85.htm
@@ -16,16 +16,18 @@
     <p>
       To move Java elements:
     </p>
-    <p>
-      1.&nbsp; From a Java view, select the Java elements you want to move.
-    </p>
-    <p>
-      2.&nbsp; From the menu bar, select <strong>Refactor &gt; Move</strong> or, from the view&#39;s pop-up menu, select <strong>Refactor &gt;&nbsp;</strong>Move.
-    </p>
-    <p>
-      3.&nbsp; In the resulting dialog, select the new location for the element and press <strong>OK</strong>.<br>
-       <strong>Note:</strong> Moving static members (such as methods and types), classes or compilation units allows you to choose to also update references to these elements.
-    </p>
+    <ol>
+		<li>
+			From a Java view, select the Java elements you want to move.
+		</li>
+		<li>
+			From the menu bar, select <strong>Refactor &gt; Move</strong> or, from the view's pop-up menu, select <strong>Refactor &gt;&nbsp;</strong>Move.
+		</li>
+		<li>
+			In the resulting dialog, select the new location for the element and press <strong>OK</strong>.<br>
+			<strong>Note:</strong> Moving static members (such as methods and types), classes or compilation units allows you to choose to also update references to these elements.
+		</li>
+	</ol>
     <p>
       You can also move Java elements by dragging them and dropping in the desired new location.
     </p>
@@ -35,42 +37,40 @@
       you want to move the elements without updating references or press <strong>Cancel</strong> if you want to cancel the move operation.
     </p>
     <p>
-      &nbsp;
     </p>
-    <br>
-     <br>
-     
     <p>
       To copy Java elements you need to copy them to clipboard and paste in the desired new location:
     </p>
-    <p>
-      1.&nbsp; From a Java view, select the Java elements you want to copy to clipboard and do one of the following:
-    </p>
-    <ul>
-      <li>
-        Press <strong>Ctrl+C</strong>
-      </li>
-      <li>
-        From the menu bar, select <strong>Edit &gt; Copy</strong>
-      </li>
-      <li>
-        From the view&rsquo;s pop-up menu, select <strong>Copy</strong>
-      </li>
-    </ul>
-    <p>
-      2.&nbsp;Now, to paste the elements, select the desired destination and do one of the following:
-    </p>
-    <ul>
-      <li>
-        Press<strong>Ctrl+V</strong>
-      </li>
-      <li>
-        From the menu bar, select <strong>Edit &gt; Paste</strong>
-      </li>
-      <li>
-        From the view&#39;s pop-up menu, select<strong>Copy</strong>
-      </li>
-    </ul>
+    <ol>
+		<li>
+			From a Java view, select the Java elements you want to copy to clipboard and do one of the following:
+		    <ul>
+			      <li>
+			        Press <strong>Ctrl+C</strong>
+			      </li>
+			      <li>
+			        From the menu bar, select <strong>Edit &gt; Copy</strong>
+			      </li>
+			      <li>
+			        From the view&rsquo;s pop-up menu, select <strong>Copy</strong>
+			      </li>
+		    </ul>
+		</li>
+		<li>
+			Now, to paste the elements, select the desired destination and do one of the following:
+		    <ul>
+		      <li>
+		        Press<strong>Ctrl+V</strong>
+		      </li>
+		      <li>
+		        From the menu bar, select <strong>Edit &gt; Paste</strong>
+		      </li>
+		      <li>
+		        From the view&#39;s pop-up menu, select<strong>Copy</strong>
+		      </li>
+		    </ul>
+		</li>
+	</ol>
     <p>
       You can also copy Java elements by dragging them and dropping in the desired new location. You will need to have <strong>Ctrl</strong> pressed while dragging to copy the
       elements.
