--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-86.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-86.htm
@@ -23,14 +23,14 @@
         In the Package Explorer, select a compilation unit.
       </li>
       <li>
-        From the compilation unit&#39;s pop-up menu, select <strong><strong>Move to Another Package</strong></strong>. The Move Compilation Unit to Another Package page opens.
+        From the compilation unit's pop-up menu, select <strong>Move to Another Package</strong>. The Move Compilation Unit to Another Package page opens.
       </li>
       <li>
-        In the <strong><strong>Choose package to move the compilation unit to</strong></strong> field, type or click <strong>Browse</strong> to select the name of the package
+        In the <strong>Choose package to move the compilation unit to</strong> field, type or click <strong>Browse</strong> to select the name of the package
         where you want the compilation unit to move.
       </li>
       <li>
-        Click <strong><strong>Next</strong></strong> to perform a refactoring without preview, or click <strong><strong>Finish</strong></strong> to perform a refactoring with
+        Click <strong>Next</strong> to perform a refactoring without preview, or click <strong>Finish</strong> to perform a refactoring with
         preview.
       </li>
     </ol>
@@ -58,9 +58,7 @@
        <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a>
     </p>
     <p>
-      <br>
-       &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height=
-      "14"></a>
+     <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
