--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-87.htm
@@ -24,10 +24,10 @@
         Do one of the following: 
         <ul>
           <li>
-            From the pop-up menu in the editor, select&nbsp;<strong><strong>Refactor &gt; Extract Method</strong></strong>.
+            From the pop-up menu in the editor, select <strong>Refactor</strong> &gt; <strong>Extract Method</strong>.
           </li>
           <li>
-            From the menu bar, select&nbsp;<strong><strong>Refactor &gt; Extract Method</strong></strong>.
+            From the menu bar, select <strong>Refactor</strong> &gt; <strong>Extract Method</strong>.
           </li>
         </ul>
       </li>
@@ -50,8 +50,7 @@
       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
        <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
        <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
-       <a href="../reference/ref-154.htm">Extract method errors</a><br>
-       &nbsp;
+       <a href="../reference/ref-154.htm">Extract method errors</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
