--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-88.htm
@@ -19,16 +19,16 @@
     </p>
     <ul>
       <li>
-        In the&nbsp;<strong><strong>Method name</strong></strong> field, type a name for the new method that will be extracted.
+        In the <strong>Method name</strong> field, type a name for the new method that will be extracted.
       </li>
       <li>
-        In the&nbsp;<strong><strong>Access Modifier</strong></strong> list, specify the method&#39;s visibility (public, default, protected, or private).
+        In the <strong>Access Modifier</strong> list, specify the method's visibility (public, default, protected, or private).
       </li>
       <li>
-        You can&nbsp;<strong><strong>Add thrown runtime exceptions to method signature</strong></strong> by selecting the corresponding checkbox.
+        You can <strong>Add thrown runtime exceptions to method signature</strong> by selecting the corresponding checkbox.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Next</strong></strong> to perform a quick refactoring, or click&nbsp;<strong><strong>Finish</strong></strong> to perform a controlled
+        Click <strong>Next</strong> to perform a quick refactoring, or click <strong>Finish</strong> to perform a controlled
         refactoring.
       </li>
     </ul>
@@ -44,8 +44,7 @@
       </li>
     </ul>
     <p>
-      <br>
-       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
