--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
@@ -21,12 +21,12 @@
         In the Package Explorer, select the compilation unit you want to rename.
       </li>
       <li>
-        From the view&#39;s pop-up menu, select&nbsp;<strong><strong>Refactor &gt; Rename</strong></strong>.
+        From the view's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong>.
       </li>
     </ol>
     <p>
       Renaming a compilation unit also renames (and updates all references to) the top-level type that has the same name as the compilation unit. For example, renaming a
-      compilation unit&nbsp;<em>A.java</em> in which a class&nbsp;<em>A</em> is declared also renames class&nbsp;<em>A</em> and updates all references to it.
+      compilation unit <em>A.java</em> in which a class <em>A</em> is declared also renames class <em>A</em> and updates all references to it.
     </p>
     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
     <p>
@@ -40,7 +40,7 @@
        <a href="tasks-107.htm">Viewing compilation errors and warnings</a><br>
        <a href="tasks-20.htm">Creating a class in an existing compilation unit</a><br>
        <a href="tasks-25.htm">Creating a new interface in a compilation unit</a><br>
-       <a href="tasks-74.htm">Showing a type&#39;s compilation unit in the Packages view</a>
+       <a href="tasks-74.htm">Showing a type's compilation unit in the Packages view</a>
     </p>
     <p>
       <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
@@ -49,8 +49,7 @@
       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
        <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
        <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
-       <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
-       &nbsp;
+       <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
