--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
@@ -23,8 +23,8 @@
         In a Java view presenting classes and/or interfaces (e.g. the Outline view, the Type Hierarchy views, etc.) select a class or interface.
       </li>
       <li>
-        From the class&#39;s or interface&#39;s pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> or use the <strong>Refactor &gt; Rename</strong> action
-        from the global menu bar.
+        From the class' or interface's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> or use the
+        <strong>Refactor</strong> &gt; <strong>Rename</strong> action from the global menu bar.
       </li>
     </ol>
     or 
@@ -33,7 +33,8 @@
         In a Java editor, select a reference to the class or interface.
       </li>
       <li>
-        From the editor&#39;s pop-up menu, select <strong>Refactor &gt; Rename</strong> or use the <strong>Refactor &gt; Rename</strong> action from the global menu bar.
+        From the editor's pop-up menu, select <strong>Refactor</strong> &gt; </strong>Rename</strong> or use the
+        <strong>Refactor</strong> &gt; <strong>Rename</strong> action from the global menu bar.
       </li>
     </ol>
     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
@@ -58,8 +59,7 @@
       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
        <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
        <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
-       <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
-       &nbsp;
+       <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
