--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
@@ -14,15 +14,15 @@
       Renaming a method
     </h1>
     <p>
-      You can rename a method by modifying its declaration in the compilation unit in which it is declared. However, if you also want to update all references to it, you must
-      either:
+      You can rename a method by modifying its declaration in the compilation unit in which it is declared. However, if you also want to update
+      all references to it, you must either:
     </p>
     <ol>
       <li>
         In a Java view presenting methods (for example the Outline view) select the method to be renamed.
       </li>
       <li>
-        From the view&#39;s pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> or select <strong>Refactor &gt; Rename</strong> from the global menu bar.
+        From the view's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> or select <strong>Refactor</strong> &gt; <strong>Rename</strong> from the global menu bar.
       </li>
     </ol>
     <p>
@@ -33,15 +33,21 @@
         In a Java editor, select a reference to or the declaration of the method to be renamed.
       </li>
       <li>
-        From the editor&#39;s pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> or select <strong>Refactor &gt; Rename</strong> from the global menu bar.
+        From the editor's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> or select <strong>Refactor</strong> &gt; <strong>Rename</strong> from the global menu bar.
       </li>
     </ol>
-     <em>Note 1: Renaming a method declared in an interface also renames (and updates all references to) all methods that are implementations of that method</em> <em>Note 2: When
-    renaming a non-static method declared as public, package visible, or protected, all methods overriding it are also renamed and all references to them are updated.</em>
-    <em>Note 3: Renaming a static method or a private method updates references only to that method.</em> 
     <p>
-      <br>
-       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+    	<strong>Note 1:</strong> Renaming a method declared in an interface also renames (and updates all references to) all methods that are implementations of that method.
+    </p>
+    <p>
+    	<strong>Note 2:</strong> When renaming a non-static method declared as public, package visible, or protected, all methods overriding it are also renamed and all references
+    	to them are updated.
+	</p>
+	<p>
+		<strong>Note 3:</strong> Renaming a static method or a private method updates references only to that method.
+	</p>
+    <p>
+      <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
     </p>
     <p>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
@@ -61,8 +67,7 @@
       <a href="../reference/ref-dialog-override-method.htm">Override methods</a><br>
        <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
        <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
-       <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
-       &nbsp;
+       <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
