--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-98.htm
@@ -14,39 +14,38 @@
       Renaming method parameters
     </h1>
     <p>
-      You can rename the parameters of a method by renaming the parameter&#39;s declaration as well as all references to the parameters inside the method body.
+      You can rename the parameters of a method by renaming the parameter's declaration as well as all references to the parameters inside the method body.
     </p>
     <p>
-      &nbsp;
+      Use the <strong>Modify Parameters</strong> command to rename one or more parameters of a method as well as all references to these parameters.
     </p>
-    <p>
-      Use the&nbsp;<strong><strong>Modify Parameters</strong></strong> command to rename one or more parameters of a method as well as all references to these parameters.
-    </p>
-    <br>
-     <br>
-     
     <ul>
       <li>
         Select the method in a Java view (the Outline view, for example)
       </li>
       <li>
-        From the method&#39;s pop-up menu, select <strong>Refactor &gt; Modify Parameters</strong> or, from the menu bar, select <strong>Refactor &gt; Modify Parameters</strong>
-        <em>Note: these menu entries will no be active if the method has no parameters.</em>
+        From the method's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Modify Parameters</strong> or, from the menu bar, select
+        <strong>Refactor</strong> &gt; <strong>Modify Parameters</strong>.<br>
+        <strong>Note:</strong> these menu entries will no be active if the method has no parameters.
       </li>
       <li>
-        Select a parameter, press the <strong>Edit</strong> button, enter a new name for the parameter and press OK
+        Select a parameter, press the <strong>Edit</strong> button, enter a new name for the parameter and press <strong>OK</strong>
       </li>
     </ul>
+    <p>
     To rename a single parameter, it is often easier to: 
+    </p>
     <ul>
       <li>
         Select the parameter in the Java editor.
       </li>
       <li>
-        From the editor&#39;s pop-up menu, select <strong>Refactor &gt; Rename</strong> to open the Rename refactoring wizard.
+        From the editor's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong> to open the Rename refactoring wizard.
       </li>
     </ul>
-    <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
+    <p>
+    	<img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159">
+    </p>
     <p>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
@@ -62,8 +61,7 @@
     <p>
       <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
        <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
-       <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
-       &nbsp;
+       <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
