--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-99.htm
@@ -19,27 +19,21 @@
     </p>
     <ul>
       <li>
-        Click in the&nbsp;<strong><strong>Name</strong></strong> column on the row containing the parameter you want to change or select the row and press
-        <strong><strong>Edit</strong></strong> and type a new name for the parameter.
+        Click in the <strong>Name</strong> column on the row containing the parameter you want to change or select the row and press
+        <strong>Edit</strong> and type a new name for the parameter.
       </li>
     </ul>
     <p>
-      Related Topics:
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
-    <ul>
-      <li>
-        <a href="tasks-82.htm">See Refactoring without Preview</a>
-      </li>
-      <li>
-        <a href="tasks-83.htm">See Refactoring with Preview</a>
-      </li>
-      <li>
-        <a href="tasks-74.htm">See Showing a Type&#39;s Compilation Unit in the Packages View</a>
-      </li>
+    <p>
+    	<a href="tasks-82.htm">See Refactoring without Preview</a><br>
+    	<a href="tasks-83.htm">See Refactoring with Preview</a><br>
+    	<a href="tasks-74.htm">See Showing a Type's Compilation Unit in the Packages View</a>
+    </p>
     </ul>
     <p>
-      <br>
-       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+    	<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
