--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-106.htm
@@ -23,7 +23,7 @@
         incremental build occurs every time you save a modified workbench resource.
       </li>
       <li>
-        Building manually: You can perform a manual build using a keyboard shortcut, a project&#39;s pop-up menu or the <strong>Project</strong> menu in the menu bar.
+        Building manually: You can perform a manual build using a keyboard shortcut, a project's pop-up menu or the <strong>Project</strong> menu in the menu bar.
       </li>
     </ul>
     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
@@ -39,7 +39,7 @@
        <a href="tasks-112.htm">Adding a library folder to the build path</a><br>
        <a href="tasks-108.htm">Building automatically</a><br>
        <a href="tasks-109.htm">Building manually</a><br>
-       <a href="tasks-111.htm">Viewing and editing a project&#39;s build path</a><br>
+       <a href="tasks-111.htm">Viewing and editing a project's build path</a><br>
        <a href="tasks-110.htm">Working with build paths</a>
     </p>
     <p>
