--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-108.htm
@@ -38,7 +38,7 @@
        <a href="tasks-112.htm">Adding a library folder to the build path</a><br>
        <a href="tasks-106.htm">Building a Java program</a><br>
        <a href="tasks-109.htm">Building manually</a><br>
-       <a href="tasks-111.htm">Viewing and editing a project&#39;s build path</a><br>
+       <a href="tasks-111.htm">Viewing and editing a project's build path</a><br>
        <a href="tasks-107.htm">Viewing compilation errors and warnings</a><br>
        <a href="tasks-110.htm">Working with build paths</a>
     </p>
