--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-73.htm
@@ -36,9 +36,7 @@
       </li>
     </ol>
     <p>
-      If there are multiple definitions of the same name, a dialog is shown, and you can select one definition that you want to open.
-    </p>
-    <p>
+      If there are multiple definitions of the same name, a dialog is shown, and you can select one definition that you want to open. 
       An editor opens containing the selected element.
     </p>
     <p>
@@ -58,8 +56,7 @@
     </p>
     <p>
       <a href="../reference/ref-menu-navigate.htm">Navigate menu</a><br>
-       <a href="../reference/ref-24.htm">Views and editors</a><br>
-       &nbsp;
+       <a href="../reference/ref-24.htm">Views and editors</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
