--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-89.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-89.htm
@@ -24,14 +24,13 @@
       </li>
     </ul>
     <p>
-      You can use the <strong>Edit &gt; Expand Selection to</strong> actions to expand an selection to a valid expression or set of statements.
+      You can use the <strong>Edit</strong> &gt; <strong>Expand Selection to</strong> actions to expand an selection to a valid expression or set of statements.
     </p>
     <p>
       On the problems pages, you can press F1 to link to a detailed description of errors.
     </p>
     <p>
-      &nbsp;<br>
-       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
 </html>
