--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
@@ -21,11 +21,11 @@
         In the Package Explorer or the Packages view select the package that you want to rename.
       </li>
       <li>
-        From the view&#39;s pop-up menu, select&nbsp;<strong><strong>Refactor &gt; Rename</strong></strong>.
+        From the view's pop-up menu, select <strong>Refactor</strong> &gt; <strong>Rename</strong>.
       </li>
     </ol>
     <p>
-      This updates all import statements of any affected compilation units and all fully qualified references to types declared in the renamed package..
+      This updates all import statements of any affected compilation units and all fully qualified references to types declared in the renamed package.
     </p>
     <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
     <p>
@@ -47,8 +47,7 @@
       <a href="../reference/ref-view-package-explorer.htm">Package Explorer</a><br>
        <a href="../reference/ref-menu-refactor.htm">Refactoring actions</a><br>
        <a href="../reference/ref-117.htm">Refactoring wizard</a><br>
-       <a href="../reference/ref-23.htm">Refactoring preferences</a><br>
-       &nbsp;
+       <a href="../reference/ref-23.htm">Refactoring preferences</a>
     </p>
     <p>
       <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
