--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-97.htm
@@ -19,32 +19,24 @@
     </p>
     <ul>
       <li>
-        In the&nbsp;<strong><strong>Enter new name</strong></strong> field, type a new name for the method.
+        In the <strong>Enter new name</strong>  field, type a new name for the method.
       </li>
       <li>
-        If you do not want to update references to the renamed method, deselect the&nbsp;<strong><strong>Update references to the renamed element</strong></strong>checkbox.
+        If you do not want to update references to the renamed method, deselect the <strong>Update references to the renamed element</strong> checkbox.
       </li>
       <li>
-        Click&nbsp;<strong><strong>Next</strong></strong> to perform a quick refactoring, or click&nbsp;<strong><strong>Finish</strong></strong> to perform a controlled
-        refactoring.
+        Click <strong>Next</strong> to perform a quick refactoring, or click <strong>Finish</strong> to perform a controlled refactoring.
       </li>
     </ul>
     <p>
-      Related Topics:
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
     </p>
-    <ul>
-      <li>
-        <a href="tasks-82.htm">See Refactoring without Preview</a>
-      </li>
-      <li>
-        <a href="tasks-83.htm">See Refactoring with Preview</a>
-      </li>
-      <li>
-        <a href="tasks-74.htm">See Showing a Type&#39;s Compilation Unit in the Packages View</a>
-      </li>
-    </ul>
     <p>
-      <br>
+    	<a href="tasks-82.htm">See Refactoring without Preview</a><br>
+    	<a href="tasks-83.htm">See Refactoring with Preview</a><br>
+    	<a href="tasks-74.htm">See Showing a Type's Compilation Unit in the Packages View</a>
+    </p>
+    <p>
        <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a>
     </p>
   </body>
