--- a/bundles/org.eclipse.test/about.html
+++ b/bundles/org.eclipse.test/about.html
@@ -1,40 +1,33 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
 <head>
 <title>About</title>
-<style type="text/css">
-p, table, td, th { font-family: arial, helvetica, geneva; font-size: 10pt}
-pre { font-family: "Courier New", Courier, mono; font-size: 10pt}
-h2 { font-family: arial, helvetica, geneva; font-size: 18pt; font-weight: bold ; line-height: 14px}
-code { font-family: "Courier New", Courier, mono; font-size: 10pt}
-sup { font-family: arial,helvetica,geneva; font-size: 10px}
-h3 { font-family: arial, helvetica, geneva; font-size: 14pt; font-weight: bold}
-li { font-family: arial, helvetica, geneva; font-size: 10pt}
-h1 { font-family: arial, helvetica, geneva; font-size: 28px; font-weight: bold}
-body { font-family: arial, helvetica, geneva; font-size: 10pt; clip: rect(   ); margin-top: 5mm; margin-left: 3mm}
-</style>
+<meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1">
 </head>
-<body lang="EN-US" link="blue" vlink="purple">
-<table border="0" cellspacing="5" cellpadding="2" width="100%" >
-  <tr> 
-    <td align="LEFT" valign="TOP" colspan="2" bgcolor="#0080C0"><b><font color="#FFFFFF">About This Content</font></b></td>
-  </tr>
-  <tr> 
-    <td> 
-      <p>25th September, 2002</p>	
+<body lang="EN-US">
+<h2>About This Content</h2>
+
+<p>2nd October, 2002</p>	
 <h3>License</h3>
-<p>Eclipse.org makes available all content in this plug-in &quot;Content&quot;.  Unless otherwise indicated below, the Content is provided to you under the terms and conditions of the
-<a href="http://www.eclipse.org/legal/cpl-v05.html">Common Public License Version 0.5</a> &quot;CPL&quot;.  For purposes of the CPL, &quot;Program&quot; will mean the Content.</p>
+<p>Eclipse.org makes available all content in this plug-in (&quot;Content&quot;).  Unless otherwise indicated below, the Content is provided to you under the terms and conditions of the
+Common Public License Version 1.0 (&quot;CPL&quot;).  A copy of the CPL is available at <a href="http://www.eclipse.org/legal/cpl-v10.html">http://www.eclipse.org/legal/cpl-v10.html</a>.
+For purposes of the CPL, &quot;Program&quot; will mean the Content.</p>
 
 <h3>Third Party Content</h3>
 
 <p>The Content includes items that have been sourced from third parties as follows:</p>
 
-      <b>Xalan 2.1.0 and XML4J 3.2.1</b> 
-      <p>The plug-in is accompanied by software based on Xalan 2.1.0 and Xerces 1.4.2 both developed by The Apache Software Foundation as part of the Apache XML project.
-Xalan is located in xalan.jar and XML4J is located in xerces.jar.  Xalan and and XML4J are both:
+<b>Xalan 2.1.0</b>
+<p>The plug-in is accompanied by software based on Xalan 2.1.0 developed by The Apache Software Foundation as part of the Apache XML project.  Therefore:</p>
+
+<blockquote>
+This product includes software developed by the Apache Software Foundation (<a href="http://www.apache.org/">http://www.apache.org/</a>).
+</blockquote>
+
+<p>The Xalan binary code is located in xalan.jar and is:</p>
 <blockquote>Copyright (c) 1999 The Apache Software Foundation. All rights reserved.</blockquote>
-Your use of Xalan and XML4J in binary code form accompanying the plug-in is subject to the terms and conditions of the 
-<a href="http://xml.apache.org/LICENSE">Apache Software License 1.1</a>.  More specifically:<p></p>
+Your use of Xalan in binary code form accompanying the plug-in is subject to the terms and conditions of the 
+Apache Software License 1.1 which is available at <a href="http://xml.apache.org/LICENSE">http://xml.apache.org/LICENSE</a>.  More specifically:</p>
 <blockquote>
 	1. Redistributions of source code must retain the above copyright notice, this list of<br />
 	conditions and the following disclaimer.<br />
@@ -52,7 +45,7 @@ Your use of Xalan and XML4J in binary code form accompanying the plug-in is subj
 	Alternately, this acknowledgment may appear in the software itself, if and wherever such<br />
 	third-party acknowledgments normally appear.<br />
 <br />
-	4. The names &quot;Xalan&quot;, &quot;Xerces&quot; and &quot;Apache Software Foundation&quot; must not be used to endorse or<br />
+	4. The names &quot;Xalan&quot; and &quot;Apache Software Foundation&quot; must not be used to endorse or<br />
 	promote products derived from this software without prior written permission. For written<br />
 	permission, please contact <a href="mailto:apache@apache.org">apache@apache.org</a>.<br />
 <br />
@@ -71,7 +64,6 @@ Your use of Xalan and XML4J in binary code form accompanying the plug-in is subj
 </blockquote>
 
 <p>Source code for Xalan is available at <a href="http://xml.apache.org/xalan-j/index.html">http://xml.apache.org/xalan-j/index.html</a>.<p>
-<p>Source code for XML4J is available at <a href="http://www.alphaworks.ibm.com/tech/xml4j">http://www.alphaworks.ibm.com/tech/xml4j</a>.</p>
 
 <h3>Contributions</h3>
 
@@ -79,12 +71,11 @@ Your use of Xalan and XML4J in binary code form accompanying the plug-in is subj
 made available to Eclipse.org, members of Eclipse.org and/or the host of Eclipse.org web site, by you that relate to such
 Content are provided under the terms and conditions of the CPL and can be made available to others under the terms of the CPL.</p>
 
-<p>If this Content is licensed to you under license terms and conditions other than the CPL &quot;Other License&quot;, any modifications, enhancements and/or
-other code and/or documentation &quot;Modifications&quot; uploaded, submitted, or otherwise made available to Eclipse.org, members of Eclipse.org and/or the
+<p>If this Content is licensed to you under license terms and conditions other than the CPL (&quot;Other License&quot;), any modifications, enhancements and/or
+other code and/or documentation (&quot;Modifications&quot;) uploaded, submitted, or otherwise made available to Eclipse.org, members of Eclipse.org and/or the
 host of Eclipse.org, by you that relate to such Content are provided under terms and conditions of the Other License and can be made available
 to others under the terms of the Other License.  In addition, with regard to Modifications for which you are the copyright holder, you are also
 providing the Modifications under the terms and conditions of the CPL and such Modifications can be made available to others under the terms of
 the CPL.</p>
-</td></tr></table>
 </body>
 </html>
